clang/test/BSC/Negative/Ownership/Owned/owned_trait_decl/owned_trait_decl.cbs
// RUN: %clang_cc1 -verify %s

_Trait T {
  int increase(This* this);
};

_Trait U {
  int increase(This* this);
};

int int::increase(This* this) {
  return *this + 1;
}

_Impl _Trait T for int;
_Impl _Trait U for int;

void test1(int x, float y, double d) {
  _Trait T* _Owned t1 = (int* _Owned)&x;
  _Trait T* _Owned t2 = (float* _Owned)&y; // expected-error {{expected a pointer type which has implemented '_Trait T', found 'float'}}
                                        // expected-warning@-1 {{incompatible pointer types initializing '_Trait T *_Owned' with an expression of type 'float *_Owned'}}
  _Trait T* _Owned t3 = (double* _Owned)&d; // expected-error {{expected a pointer type which has implemented '_Trait T', found 'double'}}
                                         // expected-warning@-1 {{incompatible pointer types initializing '_Trait T *_Owned' with an expression of type 'double *_Owned'}}
}

void test2(int x, float y, double d) {
  _Trait T* _Owned t1 = (int* _Owned)&x;
  _Trait T* _Owned t2 = t1;
  _Trait U* _Owned u1 = (int* _Owned)&x;
  _Trait T* _Owned t3 = u1; // expected-error {{incompatible _Owned types, cannot cast 'struct __Trait_U_Owned' to '_Trait T *_Owned'}}
                          // expected-error@-1 {{expected a pointer type which has implemented '_Trait T', found '_Trait U *'}}
}